# robot-simulation

./: CMakeLists.txt  build.sh  circular_list.h  delaunay.hpp  delaunay.md  drawable.cpp  drawable.h  line.cpp  line.h  line2_shape.cpp  line2_shape.h  line_shape.cpp  line_shape.h  main.cpp  main.h  main.hpp  point.cpp  point.h  point.hpp  point2_shape.cpp  point2_shape.h  point2_shape.hpp  point_shape.cpp  point_shape.h  rnd.cpp  rnd.hpp  shape.h  triangulation.cpp  triangulation.h  triangulation2.h
